<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="21dp"
        android:text="@string/someone"
        android:textSize="20sp"
        />
    
    <Button 
        android:id="@+id/button_hear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/button_hear"
        />
    
    <EditText
        android:id="@+id/ed_someone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_hear"
        android:layout_marginTop="10dp"
        android:ems="10"
        />
    
    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/ed_someone"
        android:text="@string/you"
        android:textSize="20sp"
        />
    
    <EditText
        android:id="@+id/ed_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView2"
        android:ems="10"
        />
    
    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView2"
        android:layout_below="@+id/ed_you"
        android:layout_marginTop="16dp"
        android:text="@string/talk"
        android:textSize="20sp"
        />
    
    <Button 
        android:id="@+id/button_speech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView3"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/TextView3"
        android:layout_below="@+id/ed_you"
        android:text="@string/button_speech"
        />
    
    <Button 
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView3"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/button_speech"
        android:text="@string/button_ok"
        />
    <ScrollView 
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/button_speech"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:id="@+id/tv_talk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
